style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&family=Russo+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
body{
    background: #15161F;
    color: white;
    font-family: 'Roboto Mono', monospace;
    margin: none;
    padding: none;
}
h1,h2,h3{
    text-align: center;
    font-family: 'Russo One', sans-serif;
    font-weight: 400;
}
.flexBox{
    display: flex;
    justify-content: center;
    margin-top: 90px;
}
.skillContainer{
    display: flex;
    margin: 0px 200px 0px 200px;
    flex-direction: row;
    justify-content: space-between; 
    column-gap: 24px;
    flex-wrap: wrap;
    max-width: 1040px;
}
.pinkFill{
    stroke:#FF6C74 !important;
}
.violetFill{
    stroke:#BB8AF9!important;
}
.greenFill{
    stroke:#81F785 !important;
}
.skillBox{
    justify-content: space-around;
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}
.Box
{
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 40px  1f;
}
.tabs{
    background-color: cadetblue;
    grid-area: 1 / 1 / 2 / 3;
    display: flex;
    justify-content: right;
}
.subBox
{
    grid-column-start: 1;
    overflow: hidden;
    margin-top: 30px;
}
.description
{
    grid-column-start: 2;
    display: flex;
    flex-direction: column;
}
#activeQuest{
    display: grid;
    grid-template-columns: 1fr 2fr;
    padding: 0px;
    height: 228px;
    overflow: hidden;
    height: fit-content;
}
#activeQuestDescription{
    grid-column-start: 1;
    margin: 32px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    height: fit-content;
}
#activeQuestImage{
    grid-column-start: 2;
    margin: none;
    background-image: url("Images/SF_snapshot.png");
    background-size:cover;
    clip-path: 
    polygon(
      0 0,
      100% 0,
      100% 100%,
      5% 100%
    );
    border-radius: 0px 8px 8px 0px;
}
.questTitle{
    box-shadow: 0px 2px #81f78599;
}
#activeQuestDescription > h3{
    margin: 16px 0px;
    font-size: 24px;
}
#activeQuestDescription > p{
    margin: 16px 0px;
    font-weight: 500;
}
.button{
    color: black;
    background-color: #8C9EFF;
    width: fit-content;
    padding: 8px 16px;
    margin: 16px 0px;
    font-weight: 500;
}
#activeQuestHead{
    color: #81F785;
    font-weight:400;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    font-style: normal;
    font-size: 12px;
}
.display
{
    display: block;
}
.greyBox{
    background: #282931;
    border-radius: 8px;
    padding: 32px;
    margin: 12px 0px;
    flex-grow: 1;
}
.greyBox>h3{
    font-weight: 400;
    font-size: 24px;
}
#headline{
    margin-top: 10px;
    padding: 5px;
}
#headline{
    margin: 12px 0px;
}
#headline>p{
    font-size: 24px;
    font-weight: 400;
}
#headline>h1{
    text-align: left;
    font-weight: 400;
    font-size: 48px;
}
h3{
    text-align: start;
}
h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6,p {
    margin-top: 0;
    margin-bottom: 0;
}
h1{
    font-size: 40px;
}
#header{
    box-shadow:0px 2px #3A3B43;
    display: flex;
    justify-content: row;
    justify-content: center;
    z-index: 1;
    position:fixed;
    width: 100%;
    top:0;
    background-color: rgba(21, 22, 31, 0.9);
    padding-top: 29px;
    padding-bottom: 0px;
    transition: 0.6s;
}
.shrink{
    padding-top: 10px !important;
}
.headerSelect{
    background-color: rgba(21, 22, 31, 1) !important;
}
.menuPoint{
    padding: 16px 24px;
    padding-top: 0;
    font-size: 20px;
    cursor: pointer;
    color: #3A3B43;
    transition: 0.6s;
}
.menuPoint:hover{
    color: #FFF !important;
    box-shadow:0px 2px #FFF;
}
a{
    text-decoration: none;
}
.brighter{
    color: #72737B
}
.selected{
    color: #8C9EFF;
    box-shadow:0px 2px #8C9EFF;
}
.innerBox{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 16px;
}
.circleChart{
    fill: none;
    stroke-width: 1.5px;
    stroke: #72737B;
}
.partCircle{
    stroke-linecap: round;
    animation: progress 1s ease-in-out forwards;
}
@keyframes progress{
    0% {
        stroke-dasharray: 0 100;
    }
}
@keyframes setZero{
    100% {
        stroke-dasharray: 0 100;
    }
}
.line{
    stroke-width: 2.5px;
    stroke: #72737B;
    stroke-linecap: round;
}
.otherSkills{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content:flex-start;
    gap: 24px;
}
.otherSkill{
    width: 310px;
    flex-basis: 30%;
}
.otherSkill>p{
    font-weight: 500;
    font-size: 20px;
}
.otherSkill>svg{
    width: 310px;
}
.skillLine{
    stroke: #81F785;
    animation: progress 1s ease-in-out forwards;
}
.greyBox>h3{
    margin-bottom: 24px;
}
.circleFun{
    display: flex;
    justify-content: center;
}
.skillName{
    /* justify-self: center;
    text-align: center; */
    text-anchor: middle;
    dominant-baseline: middle;
    fill: white;
    font-family: 'Roboto Mono', monospace;
    font-size: 4px;
}
.circle{
    background: #8C9EFF;
    border-radius: 50%;
    width : 48px;
    height: 48px;
    padding: auto;
    margin: 16px;
    transition: 0.4s;
}
.clickedCircle{
    background: #1A2050 !important;
}
.circle:hover{
    background: #3946AF;
}
.icon{
    top: 50%;
    left: 50%;
    transform: translate(50%, 50%);
}
.iconHighlight{
    filter: invert(63%) sepia(4%) saturate(6397%) hue-rotate(195deg) brightness(101%) contrast(101%);
}
#skills{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}
.skill{
    text-align: center;
    margin-top: 16px;
    width: min-content;
}
.skillImage{
    filter: invert(99%) sepia(26%) saturate(2831%) hue-rotate(48deg) brightness(102%) contrast(90%);
    width: 48px;
    height: 48px;
}
.skillList{
    color: rgba(255, 255, 255, 0.6);
}

